--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* COMMON STYLES */
+.wrapper {
+  @apply container mx-auto px-5 md:px-0;
+}
+
+.eq {
+  transition: 500ms cubic-bezier(0.25, 1, 0.5, 1);
+}
+
+/* LINK STYLE  */
+.link-items {
+  @apply relative;
+}
+.link-items::after {
+  @apply content-[""] absolute left-1/2 -translate-x-1/2 bottom-0 w-0 h-px bg-dark eq;
+}
+.link-items:hover::after {
+  @apply w-full;
+}
