--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+/* BASE STYLES */
+main {
+  @apply mt-20;
+}
+
 /* COMMON STYLES */
 .wrapper {
   @apply container mx-auto px-5 md:px-0;
@@ -11,13 +16,24 @@
   transition: 500ms cubic-bezier(0.25, 1, 0.5, 1);
 }
 
-/* LINK STYLE  */
-.link-items {
+.section-padding {
+  @apply py-20;
+}
+
+/* LINK STYLES */
+.link-item {
   @apply relative;
 }
-.link-items::after {
-  @apply content-[""] absolute left-1/2 -translate-x-1/2 bottom-0 w-0 h-px bg-dark eq;
+
+.link-item::after {
+  @apply eq absolute bottom-0 left-1/2  h-px w-0 -translate-x-1/2 bg-dark content-[""];
 }
-.link-items:hover::after {
+
+.link-item:hover::after {
   @apply w-full;
+}
+
+/* TYPOGRAPHY */
+.headline-1 {
+  @apply text-9xl;
 }
